Opened 18 years ago

Closed 15 years ago

#353 closed bug (fixed)

[Tracker] crash after several fast right clicks on trash icon

Reported by: diver Owned by: jackburton
Priority: normal Milestone: R1
Component: Applications/Tracker Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by jackburton)

Also Trash icon still shown as regular folder, though in context menus it have proper icon. Right clicking several times on trash icon make it generic one and after yet another several clicks tracker crashes. Tested with rev16908 under vmware.

Attachments (2)

tracker.PNG (40.7 KB ) - added by diver 18 years ago.
back trace
gdb.txt (4.1 KB ) - added by luroh 16 years ago.

Download all attachments as: .zip

Change History (24)

comment:1 by axeld, 18 years ago

Please try to file different bug reports for different problems - but anyway, this particular problem should have been fixed with hrev16909 :-) This looks like another BMenu related problem.

comment:2 by axeld, 18 years ago

Owner: changed from axeld to jackburton

by diver, 18 years ago

Attachment: tracker.PNG added

back trace

comment:3 by jackburton, 18 years ago

Still there ? I managed to reproduce these bugs on qemu too, but now it seems to be gone. Or maybe it's just less likely to happen.

comment:4 by diver, 18 years ago

(In reply to comment #3)

Still there ? I managed to reproduce these bugs on qemu too, but now it seems

to

be gone. Or maybe it's just less likely to happen.

Yes, it still there. Tested in qemu with rev16975.

comment:5 by jackburton, 18 years ago

Status: newassigned

comment:6 by jackburton, 18 years ago

Can you check a revision after 16990 ? I tested carefully with qemu and vmware and can't reproduce it anymore.

comment:7 by diver, 18 years ago

(In reply to comment #5)

Can you check a revision after 16990 ? I tested carefully with qemu and vmware and can't reproduce it anymore.

I'll try when i get home and have some time.

comment:8 by diver, 18 years ago

This bug is still there in rev16998.

comment:9 by jackburton, 18 years ago

I could've found the problem, looking into it...

comment:10 by jackburton, 18 years ago

Summary: [Tracker] crash after several fast right clicks on desktop[Tracker] crash after several fast right clicks on trash icon

comment:11 by jackburton, 18 years ago

Fixed in hrev17136

comment:12 by jackburton, 18 years ago

Status: assignedclosed

comment:13 by jackburton, 18 years ago

Resolution: fixed

comment:14 by jackburton, 16 years ago

Description: modified (diff)
Platform: All
Resolution: fixed
Status: closedreopened

Let's reopen this again, since it's still reproducible.

comment:15 by Coldfirex, 16 years ago

Unable to reproduce in hrev26984 under vmware.

comment:16 by luroh, 16 years ago

I can reproduce it in Vmware, hrev27006.

by luroh, 16 years ago

Attachment: gdb.txt added

comment:17 by anevilyak, 16 years ago

Component: - GeneralApplications/Tracker

That one might actually be an original Tracker bug, I think I remember that one being there in BeOS 5 too.

comment:18 by aldeck, 16 years ago

Even more easily reproducible if you move the mouse while fast-clicking (within the icon off-course). Not moving at all (turn your mouse upsidedown) makes it really hard to reproduce (if not unreproducible).

Can't provide a backtrace right know, sorry, but it calls the debuger in _AddChild: AddChild failed - the view already has a parent.

Might be unrelated, but while testing this, i noticed another strange thing:

If you move really slowly (like 1 pixel beetween two clicks [doesn't need to be fast clicks]) it can toggle the focus of a tracker window, specifically the last focused one. (easily reproducible too, and on any desktop icon)

comment:19 by aldeck, 16 years ago

i couldn't reproduce on it hrev5 (max v4.1), maybe it's not tracker's fault after all...

comment:20 by anevilyak, 16 years ago

Was that R5 with the stock Tracker or with OpenTracker? I specifically remember patching a few race conditions in OT to try and reduce that problem, though I don't remember managing to eliminate it completely.

in reply to:  20 comment:21 by aldeck, 16 years ago

Replying to anevilyak:

Was that R5 with the stock Tracker or with OpenTracker?

Thats opentracker for sure, i don't know how to find the version though..

comment:22 by aldeck, 15 years ago

Resolution: fixed
Status: reopenedclosed

Fixed in hrev28089

Note: See TracTickets for help on using tickets.